--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.0",
-    "pg": "^8.0.3",
-    "sqlite3": "^4.1.1"
+    "pg": "^8.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "sqlite3": "^4.1.1"
   }
 }
