--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.0",
+    "knex-cleaner": "^1.3.0",
     "node-pre-gyp": "^0.14.0",
     "pg": "^8.0.3"
   },
