--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test:watch": "jest --watch",
+    "clear_jest": "jest --clearCache"
   },
   "repository": {
     "type": "git",
